@@ -59,6 +59,7 @@ echocancelold=yes;use facility selector 6 instead of correct 8 (necessary for ol
 ;bridge=yes      ;native bridging (CAPI line interconnect) if available
 ;callgroup=1     ;PBX call group
 ;pickupgroup=1   ;PBX pickup group (which call groups are we allowed to pickup)
+;transfergroup=1 ;Controller(s) where a transfer on native bridge is allowed to.
 ;language=de     ;set language for this device (overwrites default language)
 ;disallow=all    ;RTP codec selection (valid with Eicon DIVA Server only)
 ;allow=all       ;RTP codec selection (valid with Eicon DIVA Server only)
